zerowaste-api/src/main/java/com/example/zerowaste_api/common/error/UserErrorConstant.java
package com.example.zerowaste_api.common.error;

public class UserErrorConstant {
    public static final String USER_NOT_FOUND = "user.notFound";
    public static final String USER_INVALID_LOGIN = "Invalid Credentials";
}
